# noil

./: CHANGELOG.md  Cargo.toml  README.md  cuddle.yaml  mise.toml
crates/noil/: Cargo.toml
crates/noil/src/: cli.rs  commit.rs  encode_rand.rs  find_prefix.rs  format.rs  main.rs  models.rs  output.rs  parse.rs
crates/noil/src/cli/: apply.rs  edit.rs  fmt.rs  output.rs
helix/highlights/: highlights.scm
templates/: docker-compose.yaml
