[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.2"

[workspace.dependencies]
noil = { path = "crates/noil" }

anyhow = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.18" }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = { version = "0.15" }
