[package]
name = "noil"
edition = "2021"

version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
walkdir = "2.5.0"
ignore = "0.4.23"
blake3 = "1.8.2"
rand = "0.9.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
