[package]
name = "noil"
edition = "2024"
readme = "../../README.md"
license = "MIT"
description = "file explorer using text buffers"
authors = ["kjuulh <contact@kasperhermansen.com>"]
repository = "https://git.kjuulh.io/kjuulh/noil"

version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
walkdir = "2.5.0"
ignore = "0.4.23"
blake3 = "1.8.2"
rand = "0.10.0"
ansi_term = "0.12.1"
shellexpand = "3.1.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
